Corrective Smooth modifier breaks when drivers are involved. #69542

Closed
opened 2019-09-05 15:21:21 +02:00 by Demeter Dzadik · 5 comments
Member

System Information
Operating system: Linux-5.0.0-21-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.34

Blender Version
Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-05 11:47, hash: 7825697827

Short description of error
The Corrective Smooth modifier behaves really strangely when any drivers affect it, even in an indirect way. There are no depsgraph warnings in the console. See Case 2 & 4 in this screenshot and blend file.
image.png
corrective_smooth_driver_bug_examples.blend

Exact steps for others to reproduce the error

  • Open attached .blend
  • See how in Case 2 & 4, where drivers are involved, the Corrective Smooth sort of shrinks the mesh rather than smooth it.
  • Go to frame 20
  • On the Case 2.2 cylinder, toggle the Corrective Smooth off and back on.
  • Go to frame 40
  • Now the cylinder expands rather than shrinks... Not to mention, the modifier's influence at this point is 0.
**System Information** Operating system: Linux-5.0.0-21-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.34 **Blender Version** Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-05 11:47, hash: 7825697827 **Short description of error** The Corrective Smooth modifier behaves really strangely when any drivers affect it, even in an indirect way. There are no depsgraph warnings in the console. See Case 2 & 4 in this screenshot and blend file. ![image.png](https://archive.blender.org/developer/F7718270/image.png) [corrective_smooth_driver_bug_examples.blend](https://archive.blender.org/developer/F7718278/corrective_smooth_driver_bug_examples.blend) **Exact steps for others to reproduce the error** - Open attached .blend - See how in Case 2 & 4, where drivers are involved, the Corrective Smooth sort of shrinks the mesh rather than smooth it. - Go to frame 20 - On the Case 2.2 cylinder, toggle the Corrective Smooth off and back on. - Go to frame 40 - Now the cylinder expands rather than shrinks... Not to mention, the modifier's influence at this point is 0.
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Sebastian Parborg self-assigned this 2019-09-05 16:35:20 +02:00

I've posted a fix here: D5694

I've posted a fix here: [D5694](https://archive.blender.org/developer/D5694)

This issue was referenced by 9e62cca29d

This issue was referenced by 9e62cca29d1858b56329a07993b6ecf4c6be5d4d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Absolute legend.

Absolute legend.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69542
No description provided.